# GR-Compact-Objects

./: .gitignore  Cargo.toml  README.md
research_project/: Cargo.toml  pyproject.toml
research_project/src/: free_fall.rs  main.rs  plot_data.py  stellar.rs
src/: adaptive_rk4.rs  lib.rs  rk4.rs  stellar_structure.rs
