[tool.poetry]
name = "research-project"
version = "0.1.0"
description = ""
authors = ["kkin1995 <7694983+kkin1995@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
